--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -2,75 +2,68 @@
   "@metadata": {
     "authors": [
       "Niharika Kohli",
-      "Leon Ziemba",
+      "MusikAnimal",
       "Ryan Kaldari"
     ]
   },
-  "header-title": "CopyPatrol",
-  "header-documentation": "Documentation",
-  "header-feedback": "Feedback",
-  "header-leaderboard": "Leaderboard",
-  "header-login": "Login",
-  "header-logout": "Logout",
+  "name": "CopyPatrol",
+  "documentation": "Documentation",
+  "feedback": "Feedback",
+  "leaderboard": "Leaderboard",
+  "login": "Login",
+  "logout": "Logout",
   "header-loggedin": "You are logged in as: $1",
   "form-all": "All cases",
   "form-open": "Open cases",
   "form-reviewed": "Reviewed cases",
   "form-mine": "My reviews",
   "form-drafts": "Drafts only",
-  "form-wikiprojects": "Wikiprojects",
+  "wikiprojects": "Wikiprojects",
   "form-wikiprojects-placeholder": "Type Wikiproject names...",
-  "form-submit": "Submit",
-  "col-page": "Page",
-  "col-diff": "Diff",
-  "col-editor": "Editor",
-  "col-wikiprojects": "Wikiprojects",
-  "col-review": "Review",
+  "submit": "Submit",
+  "page": "Page",
+  "diff": "Diff",
+  "editor": "Editor",
+  "review": "Review",
   "review-fixed": "Page fixed",
   "review-fixed-tooltip": "The edit was a copyright violation and has been reverted",
   "review-false": "No action needed",
   "review-false-tooltip": "The edit is a false positive, nothing needs to be done",
   "review-by": "Reviewed by:",
-  "record-history": "History",
-  "record-diff": "Diff",
-  "record-talk": "Talk",
-  "record-contribs": "Contributions",
+  "history": "History",
+  "talk": "Talk",
+  "contribs": "Contributions",
   "record-editcount": "Edit count:",
-  "record-compare": "Compare",
+  "compare": "Compare",
   "record-ithenticate": "iThenticate report",
   "record-url-text": "$1 of edit ($2 words)",
   "record-noeditor": "No editor found",
   "record-noeditor-tooltip": "The revision may have been deleted or the data is not yet available in Labs database.",
   "record-ores": "ORES score: $1",
-  "compare-article": "Article",
+  "article": "Article",
   "compare-article-loading": "Loading article revision...",
-  "compare-source": "Source",
   "compare-source-loading": "Loading possible copyvio source...",
   "footer-loadmore": "Load More",
   "footer-nomore": "No more records!",
-  "footer-broughtby": "Brought to you by",
+  "footer-broughtby": "Brought to you by $1",
   "footer-commtech": "Community Tech",
-  "footer-poweredby": "Powered by ",
-  "footer-eranbot": "Eranbot",
-  "footer-turnitin": "Turnitin",
-  "footer-source": "Source",
-  "footer-phabricator": "Phabricator",
+  "footer-poweredby": "Powered by $1 and $2",
+  "source": "Source",
+  "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
   "lboard-title": "Leaderboard",
   "lboard-week": "Cases closed in the<br/> last 7 days",
   "lboard-month": "Cases closed in the<br/> last 30 days",
   "lboard-alltime": "All time<br/> cases closed",
   "lboard-back": "Back to CopyPatrol",
+  "close": "Close",
   "imageattr-title": "Image attribution",
-  "imageattr-close": "Close",
   "imageattr-logo": "CopyPatrol logo",
-  "imageattr-pd": "available to the public domain",
-  "imageattr-xander": "courtesy of Xander89",
-  "imageattr-tango": "and the Tango DesktopProject.",
-  "imageattr-font": "Bitter font",
-  "imageattr-openfont": "released under the OpenFont License",
-  "imageattr-huerta": "courtesy of Huerta Tipográfica.",
-  "alert-testing": "This is a staging environment. Please do not use this tool to record your reviews. For the actual CopyPatrol tool, please use <a href=\"https://tools.wmflabs.org/copypatrol/\">tools.wmflabs.org/copypatrol</a>.",
+  "public-domain": "public domain",
+  "open-font-license": "Open Font License",
+  "imageattr-paragraph1": "$1 available to the $2 courtesy of $3 and the $4",
+  "imageattr-paragraph2": "$1 released under the $2 courtesy of $3",
+  "alert-testing": "This is a staging environment. Please do not use this tool to record your reviews. For the actual CopyPatrol tool, please use $1.",
   "js-unauthorized": "You need to be logged in to be able to review.",
   "js-dberror": "There was an error in connecting to database.",
   "js-undo-own-only": "You can only undo your own reviews.",
