Split out header, footer & modal; Add qqq; Changes per review

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -18,8 +18,8 @@
   "form-reviewed": "Reviewed cases",
   "form-mine": "My reviews",
   "form-drafts": "Drafts only",
-  "wikiprojects": "Wikiprojects",
-  "form-wikiprojects-placeholder": "Type Wikiproject names...",
+  "wikiprojects": "WikiProjects",
+  "form-wikiprojects-placeholder": "Type WikiProject names...",
   "submit": "Submit",
   "page": "Page",
   "diff": "Diff",
@@ -52,9 +52,9 @@
   "phabricator": "Phabricator",
   "footer-imageattr": "Image attribution",
   "lboard-title": "Leaderboard",
-  "lboard-week": "Cases closed in the<br/> last 7 days",
-  "lboard-month": "Cases closed in the<br/> last 30 days",
-  "lboard-alltime": "All time<br/> cases closed",
+  "lboard-week": "Cases closed in the last 7 days",
+  "lboard-month": "Cases closed in the last 30 days",
+  "lboard-alltime": "All time cases closed",
   "lboard-back": "Back to CopyPatrol",
   "close": "Close",
   "imageattr-title": "Image attribution",
