--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -10,6 +10,7 @@
   "documentation": "Documentation",
   "feedback": "Feedback",
   "leaderboard": "Leaderboard",
+  "switch-language": "Switch language",
   "login": "Login",
   "logout": "Logout",
   "header-loggedin": "You are logged in as: $1",
