--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -10,7 +10,8 @@
   "documentation": "Documentation",
   "feedback": "Feedback",
   "leaderboard": "Leaderboard",
-  "switch-language": "Switch language",
+  "en-wikipedia": "English Wikipedia",
+  "fr-wikipedia": "French Wikipedia",
   "login": "Login",
   "logout": "Logout",
   "header-loggedin": "You are logged in as: $1",
