--- a/public_html/i18n/fr.json
+++ b/public_html/i18n/fr.json
@@ -1,3 +1,6 @@
 {
-	"name": "CopyPatrol"
+	"name": "CopyPatrol",
+	"wikiprojects": "WikiProjets",
+	"fr-wikipedia": "Wikipédia Français",
+	"en-wikipedia": "Wikipédia Anglais"
 }
