Enable use on all Wikipedias
This change updates CopyPatrol to work on all language
Wikipedias that are supported by EranBot. Primarily it
focusses on getting things working with French (for
which translations are encluded here) but with the
exception of the WikiProject prefix cleanup in index.js
there's now nothing here specific to any one language.

Upgrading to this will require a couple of changes in
the .env file, and running `composer install`.

Bug: https://phabricator.wikimedia.org/T145436

--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -11,6 +11,8 @@
 	"documentation": "Link to documentation in header\n{{Identical|Documentation}}",
 	"feedback": "Link to feedback in header\n{{Identical|Feedback}}",
 	"leaderboard": "Link to a list of the top reviewers in header",
+	"fr-wikipedia": "Window title. Name of the French Wikipedia",
+	"en-wikipedia": "Window title. Name of the English Wikipedia",
 	"login": "Button label\n{{Identical|Login}}",
 	"logout": "Button label\n{{Identical|Logout}}",
 	"header-loggedin": "Message to tell user who they are logged in as.\n Parameter: $1 - Wiki username.",
