--- a/public_html/i18n/fr.json
+++ b/public_html/i18n/fr.json
@@ -8,6 +8,8 @@
 	"documentation": "Documentation",
 	"feedback": "Avis",
 	"leaderboard": "Tableau des scores",
+	"fr-wikipedia": "Wikipédia Français",
+	"en-wikipedia": "Wikipédia Anglais",
 	"login": "Login",
 	"logout": "Déconnexion",
 	"header-loggedin": "Vous êtes connecté en tant que $1",
