Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/it.json
+++ b/public_html/i18n/it.json
@@ -25,16 +25,27 @@
 	"contribs": "Contributi",
 	"record-editcount": "Conteggio modifiche:",
 	"compare": "Confronta",
+	"record-url-text": "$1 della modifica ($2 parole)",
 	"record-ores": "Punteggio ORES: $1",
 	"article": "Voce",
 	"footer-loadmore": "Caricane ancora",
 	"footer-nomore": "Nessun altro record!",
+	"footer-broughtby": "Creato per te dalla $1",
+	"footer-commtech": "Community Tech",
+	"footer-poweredby": "Fornito da $1 e $2",
 	"source": "Sorgente",
 	"phabricator": "Phabricator",
+	"footer-imageattr": "Attribuzione immagine",
 	"lboard-week": "Casi chiusi negli ultimi 7 giorni",
+	"lboard-month": "Casi chiusi negli ultimi 30 giorni",
+	"lboard-back": "Torna a CopyPatrol",
 	"close": "Chiudi",
 	"imageattr-title": "Attribuzione immagine",
+	"imageattr-logo": "logo CopyPatrol",
 	"public-domain": "pubblico dominio",
+	"open-font-license": "licenza Open Font",
+	"imageattr-paragraph1": "Il $1 è disponibile al $2 per gentile concessione di $3 e $4",
+	"imageattr-paragraph2": "$1 è rilasciato in base alla $2 per gentile concessione di $3",
 	"js-dberror": "Si è verificato un errore nella connessione al database.",
 	"js-unknown-error": "Si è verificato un errore sconosciuto durante il caricamento dei risultati. Riprova."
 }
