--- a/public_html/i18n/lb.json
+++ b/public_html/i18n/lb.json
@@ -4,6 +4,7 @@
 			"Robby"
 		]
 	},
+	"name": "CopyPatrol",
 	"documentation": "Dokumentatioun",
 	"feedback": "Feedback",
 	"leaderboard": "Tabell vun de Scoren",
