--- a/public_html/i18n/lb.json
+++ b/public_html/i18n/lb.json
@@ -8,6 +8,8 @@
 	"documentation": "Dokumentatioun",
 	"feedback": "Feedback",
 	"leaderboard": "Tabell vun de Scoren",
+	"en-wikipedia": "Wikipedia op Englesch",
+	"fr-wikipedia": "Wikipedia op franséisch",
 	"login": "Aloggen",
 	"logout": "Ausloggen",
 	"header-loggedin": "Dir sidd ageloggt als: $1",
@@ -47,13 +49,17 @@
 	"footer-poweredby": "Funktionéiert mat Hëllef vum $1 an $2",
 	"source": "Quell",
 	"phabricator": "Phabricator",
+	"lboard-title": "Tabell vun de Scoren",
 	"lboard-week": "Fäll, déi an de leschte 7 Deeg zougemaach goufen",
+	"lboard-month": "Fäll déi  an de leschten 30 Deeg zougemaach goufen",
+	"lboard-alltime": "All Fäll déi vum Ufank un zougemaach goufen",
 	"lboard-back": "Zréck op CopyPatrol",
 	"close": "Zoumaachen",
 	"imageattr-logo": "CopyPatrol-Logo",
 	"public-domain": "ëffentlechen Domaine",
 	"open-font-license": "Open-Font-Lizenz",
 	"imageattr-paragraph1": "$1 disponibel ënnert der $2. Frëndlecherweis zur Verfügung gestallt vum $3 an $4.",
+	"imageattr-paragraph2": "$1 verëffentlecht ënner der $2 duerch $3",
 	"js-unauthorized": "Dir musst ageloggt si fir nokucken ze kënnen.",
 	"js-dberror": "Et gouf e Feeler beim Verbanne mat der Datebank.",
 	"js-undo-own-only": "Dir kënnt nëmmen Är eegen nogekuckt Aktiounen zrécksetzen.",
