--- a/public_html/i18n/pl.json
+++ b/public_html/i18n/pl.json
@@ -1,20 +1,34 @@
 {
 	"@metadata": {
 		"authors": [
-			"Chrumps"
+			"Chrumps",
+			"Woytecr"
 		]
 	},
 	"name": "CopyPatrol",
 	"documentation": "Dokumentacja",
 	"feedback": "Opinie",
+	"leaderboard": "Tabela liderów",
+	"en-wikipedia": "Wikipedia w języku angielskim",
+	"fr-wikipedia": "Wikipedia w języku francuskim",
 	"login": "Zaloguj się",
 	"logout": "Wyloguj",
 	"header-loggedin": "Jesteś zalogowany jako: $1",
 	"form-all": "Wszystkie przypadki",
+	"form-open": "Otwarte sprawy",
+	"form-reviewed": "Przejrzane sprawy",
+	"form-mine": "Przejrzane przeze mnie",
+	"form-drafts": "Tylko robocze",
 	"wikiprojects": "WikiProjekty",
+	"form-wikiprojects-placeholder": "Wpisz nazwy WikiProjektów...",
 	"submit": "Wyślij",
 	"page": "Strona",
+	"diff": "Zmiany",
+	"editor": "Edytujący",
+	"review": "Przejrzyj",
 	"review-fixed": "Strona naprawiona",
+	"review-fixed-tooltip": "Ta edycja naruszała prawa autorskie i została wycofana",
+	"review-false": "Nie jest wymagana żadna akcja",
 	"history": "Historia",
 	"talk": "Dyskusja",
 	"contribs": "Edycje",
@@ -28,6 +42,9 @@
 	"footer-loadmore": "Wczytaj więcej",
 	"source": "Źródło",
 	"phabricator": "Phabricator",
+	"lboard-title": "Tabela liderów",
+	"lboard-week": "Sprawy zamknięte w ciągu ostatnich 7 dni",
+	"lboard-month": "Sprawy zamknięte w ciągu ostatnich 30 dni",
 	"lboard-back": "Wróć do CopyPatrol",
 	"close": "Zamknij",
 	"imageattr-logo": "Logo CopyPatrol",
