--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -1,27 +1,35 @@
 {
 	"@metadata": {
 		"authors": [
-			"Kareyac"
+			"Kareyac",
+			"Irus"
 		]
 	},
+	"name": "CopyPatrol",
 	"documentation": "Документация",
 	"feedback": "Обратная связь",
 	"leaderboard": "Таблица лидеров",
+	"en-wikipedia": "Английская Википедия",
+	"fr-wikipedia": "Французская Википедия",
 	"login": "Вход",
 	"logout": "Выйти",
 	"header-loggedin": "Вы вошли как $1",
 	"form-all": "Во всех случаях",
+	"form-open": "Открытые дела",
 	"form-reviewed": "Проверенные страницы",
 	"form-mine": "Мои комментарии",
+	"form-drafts": "Только черновики",
 	"wikiprojects": "ВикиПроекты",
 	"form-wikiprojects-placeholder": "Введите имя ВикиПроекта...",
 	"submit": "Отправить",
 	"page": "Страница",
+	"diff": "Изменение",
 	"editor": "Редактор",
 	"review": "Проверить",
 	"review-fixed": "Страница исправлена",
 	"review-fixed-tooltip": "Правка является нарушением авторских прав и было отменено",
 	"review-false": "Действий не требуется",
+	"review-false-tooltip": "Изменить это ложное срабатывание, ничего не надо делать",
 	"review-by": "Рассмотрены:",
 	"history": "История",
 	"talk": "Обсуждение",
@@ -29,11 +37,17 @@
 	"record-editcount": "Счётчик правок",
 	"compare": "Сравнить",
 	"record-ithenticate": "отчет iThenticate",
+	"record-url-text": "$1 редактировать ($2 слова)",
 	"record-noeditor": "Редактор не найден",
+	"record-noeditor-tooltip": "Пересмотр может быть удален или данные еще не доступны в базе данных лаборатории.",
+	"record-ores": "Рудами результат: $1",
 	"article": "Статья",
+	"compare-article-loading": "Загрузка пересмотр статьи...",
+	"compare-source-loading": "Погрузка возможный источник copyvio...",
 	"footer-loadmore": "Загрузить ещё",
 	"footer-nomore": "Больше никаких записей!",
 	"footer-broughtby": "Принес вам $1",
+	"footer-commtech": "Сообщество Технологий",
 	"footer-poweredby": "Питание от $1 и $2",
 	"source": "Источник",
 	"phabricator": "Фабрикатор",
@@ -41,13 +55,18 @@
 	"lboard-title": "Таблица лидеров",
 	"lboard-week": "Случаи, которые были закрыты в последние 7 дней",
 	"lboard-month": "Случаи, которые были закрыты в течение последних 30 дней",
+	"lboard-alltime": "Во всех случаях время закрыт",
 	"lboard-back": "Вернуться к CopyPatrol",
 	"close": "Закрыть",
 	"imageattr-title": "Атрибуция изображения",
 	"imageattr-logo": "Логотип CopyPatrol",
 	"public-domain": "общественное достояние",
+	"open-font-license": "Открытая Лицензия Шрифта",
+	"imageattr-paragraph1": "$1 доступных на $2 учтивость $3 и $4",
+	"imageattr-paragraph2": "$1 выпущен под $2 учтивость $3",
 	"alert-testing": "Это промежуточная среда. Пожалуйста, не используйте этот инструмент для записи Ваших комментариев. Для инструмента CopyPatrol, пожалуйста, используйте $1.",
 	"js-unauthorized": "Вы должны войти в систему, чтобы проводить проверки.",
 	"js-dberror": "Произошла ошибка при подключении к базе данных.",
-	"js-undo-own-only": "Можно отменить только собственные проверки."
+	"js-undo-own-only": "Можно отменить только собственные проверки.",
+	"js-unknown-error": "Произошла неизвестная ошибка при загрузке результатов. Пожалуйста, попробуйте снова."
 }
