--- a/public_html/i18n/sv.json
+++ b/public_html/i18n/sv.json
@@ -4,26 +4,41 @@
 			"WikiPhoenix"
 		]
 	},
+	"name": "CopyPatrol",
 	"documentation": "Dokumentation",
 	"feedback": "Återkoppling",
+	"leaderboard": "Topplista",
 	"login": "Logga in",
 	"logout": "Logga ut",
+	"header-loggedin": "Du är inloggad som: $1",
 	"form-mine": "Mina granskningar",
 	"form-drafts": "Endast utkast",
 	"submit": "Skicka",
 	"page": "Sida",
 	"diff": "Diff",
 	"editor": "Redigerare",
+	"review": "Granskning",
 	"review-false": "Ingen åtgärd behövs",
+	"review-by": "Granskad av:",
 	"history": "Historik",
 	"talk": "Diskussion",
 	"contribs": "Bidrag",
 	"record-editcount": "Antal redigeringar:",
 	"compare": "Jämför",
+	"record-ithenticate": "iThenticate-rapport",
 	"record-noeditor": "Ingen redigerare hittades",
 	"article": "Artikel",
 	"compare-article-loading": "Läser in artikelversion...",
 	"footer-loadmore": "Läs in fler",
+	"footer-poweredby": "Drivs av $1 och $2",
 	"source": "Källa",
-	"lboard-title": "Topplista"
+	"phabricator": "Phabricator",
+	"lboard-title": "Topplista",
+	"lboard-back": "Tillbaka till CopyPatrol",
+	"close": "Stäng",
+	"public-domain": "public domain",
+	"js-unauthorized": "Du måste vara inloggad för att kunna granska.",
+	"js-dberror": "Ett fel uppstod vid anslutning till databasen.",
+	"js-undo-own-only": "Du kan endast ångra dina egna granskningar.",
+	"js-unknown-error": "Ett okänt fel uppstod när resultaten lästes in. Var god försök igen."
 }
