Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/bn.json
+++ b/public_html/i18n/bn.json
@@ -8,6 +8,8 @@
 	"documentation": "নথিপত্র",
 	"feedback": "প্রতিক্রিয়া",
 	"leaderboard": "লিডারবোর্ড",
+	"en-wikipedia": "ইংরেজি উইকিপিডিয়া",
+	"fr-wikipedia": "ফরাসি উইকিপিডিয়া",
 	"login": "প্রবেশ",
 	"logout": "প্রস্থান",
 	"header-loggedin": "আপনি $1 হিসাবে প্রবেশ করেছেন",
