--- a/public_html/i18n/lt.json
+++ b/public_html/i18n/lt.json
@@ -6,21 +6,26 @@
 	},
 	"documentation": "Dokumentacija",
 	"feedback": "Atsiliepimai",
+	"en-wikipedia": "Anglų Vikipedija",
+	"fr-wikipedia": "Prancūzų Vikipedija",
 	"login": "Prisijungti",
 	"logout": "Atsijungti",
 	"header-loggedin": "Esate prisijungę kaip: $1",
 	"form-all": "Visos bylos",
 	"form-open": "Atviros bylos",
 	"form-reviewed": "Peržiūrėtos bylos",
+	"form-mine": "Mano apžvalgos",
 	"form-drafts": "Tik juodraščiai",
 	"wikiprojects": "VikiProjektai",
 	"form-wikiprojects-placeholder": "Įveskite VikiProjekto pavadinimus...",
 	"submit": "Siųsti",
 	"page": "Puslapis",
 	"editor": "Redaktorius",
+	"review": "Apžvalga",
 	"review-fixed": "Puslapis sutvarkytas",
 	"review-fixed-tooltip": "Pakeitimas pažeidė autorines teises ir buvo atmestas",
 	"review-false": "Jokių veiksmų nereikia",
+	"review-by": "Apžvelgė:",
 	"history": "Istorija",
 	"talk": "Aptarimas",
 	"contribs": "Įnašai",
@@ -28,8 +33,10 @@
 	"compare": "Palyginti",
 	"record-ithenticate": "iThenticate ataskaita",
 	"record-url-text": "$1 pakeitimo ($2 žodžių)",
+	"record-noeditor": "Nerastas joks redaktorius",
 	"record-ores": "ORES balas: $1",
 	"article": "Straipsnis",
+	"compare-article-loading": "Įkeliama straipsnio apžvalga...",
 	"footer-loadmore": "Įkelti Daugiau",
 	"footer-nomore": "Daugiau įrašų nėra!",
 	"source": "Šaltinis",
