--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -47,7 +47,7 @@
 	"footer-loadmore": "Загрузить ещё",
 	"footer-nomore": "Больше никаких записей!",
 	"footer-broughtby": "Принес вам $1",
-	"footer-commtech": "Сообщество Технологий",
+	"footer-commtech": "Сообщество технологий",
 	"footer-poweredby": "Питание от $1 и $2",
 	"source": "Источник",
 	"phabricator": "Фабрикатор",
