--- a/public_html/i18n/es.json
+++ b/public_html/i18n/es.json
@@ -1,42 +1,72 @@
 {
 	"@metadata": {
 		"authors": [
-			"Macofe"
+			"Macofe",
+			"Fitoschido"
 		]
 	},
+	"name": "CopyPatrol",
 	"documentation": "Documentación",
 	"feedback": "Comentarios",
-	"login": "Iniciar sesión",
-	"logout": "Cerrar sesión",
+	"leaderboard": "Tabla de posiciones",
+	"en-wikipedia": "Wikipedia en inglés",
+	"fr-wikipedia": "Wikipedia en francés",
+	"login": "Acceder",
+	"logout": "Salir",
 	"header-loggedin": "Has accedido como: $1",
 	"form-all": "Todos los casos",
 	"form-open": "Casos abiertos",
 	"form-reviewed": "Casos revisados",
 	"form-mine": "Mis revisiones",
-	"form-drafts": "Sólo borradores",
-	"wikiprojects": "WikiProyectos",
-	"form-wikiprojects-placeholder": "Escribe nombres de WikiProyectos...",
+	"form-drafts": "Solo borradores",
+	"wikiprojects": "Wikiproyectos",
+	"form-wikiprojects-placeholder": "Escribe nombres de wikiproyectos…",
 	"submit": "Enviar",
 	"page": "Página",
-	"diff": "Dif",
+	"diff": "Diferencias",
 	"editor": "Editor",
 	"review": "Revisión",
+	"review-fixed": "Página corregida",
+	"review-fixed-tooltip": "La edición constituía una violación de derechos de autor y fue revertida",
+	"review-false": "No se necesita ninguna acción",
+	"review-false-tooltip": "Esta edición es un falso positivo; no se necesita hacer nada al respecto",
 	"review-by": "Revisado por:",
 	"history": "Historial",
 	"talk": "Discusión",
 	"contribs": "Contribuciones",
 	"record-editcount": "Conteo de ediciones:",
 	"compare": "Comparar",
+	"record-ithenticate": "Informe de iThenticate",
+	"record-url-text": "$1 de la edición ($2 palabras)",
+	"record-noeditor": "No se encontró ningún editor",
+	"record-noeditor-tooltip": "Es posible que la edición se haya borrado o que los datos no estén disponibles aún en la base de datos de Labs.",
+	"record-ores": "Puntuación de ORES: $1",
 	"article": "Artículo",
+	"compare-article-loading": "Cargando la edición del artículo…",
+	"compare-source-loading": "Cargando la posible fuente de la violación de derechos…",
 	"footer-loadmore": "Cargar más",
 	"footer-nomore": "¡No hay más registros!",
+	"footer-broughtby": "Provista por $1",
+	"footer-commtech": "Tecnología comunitaria",
+	"footer-poweredby": "Funciona gracias a $1 y $2",
 	"source": "Fuente",
 	"phabricator": "Phabricator",
 	"footer-imageattr": "Atribución de imágenes",
+	"lboard-title": "Tabla de posiciones",
 	"lboard-week": "Casos cerrados en los últimos 7 días",
 	"lboard-month": "Casos cerrados en los últimos 30 días",
 	"lboard-alltime": "Casos cerrados de todos los tiempos",
+	"lboard-back": "Volver a CopyPatrol",
 	"close": "Cerrar",
 	"imageattr-title": "Atribución de imagen",
-	"public-domain": "dominio público"
+	"imageattr-logo": "Logo de CopyPatrol",
+	"public-domain": "dominio público",
+	"open-font-license": "Open Font License",
+	"imageattr-paragraph1": "$1 disponible para $2 cortesía de $3 y $4",
+	"imageattr-paragraph2": "$1 publicado bajo $2 cortesía de $3",
+	"alert-testing": "Este es un entorno de pruebas. No utilices esta herramienta para registrar tus revisiones. Para visitar la herramienta CopyPatrol verdadera, ve a $1.",
+	"js-unauthorized": "Debes acceder para realizar revisiones.",
+	"js-dberror": "Se produjo un error al conectar con la base de datos.",
+	"js-undo-own-only": "Puedes deshacer únicamente tus propias revisiones.",
+	"js-unknown-error": "Se produjo un error desconocido al cargar los resultados. Inténtalo de nuevo."
 }
