Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -2,7 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Kareyac",
-			"Irus"
+			"Irus",
+			"Kaganer"
 		]
 	},
 	"name": "CopyPatrol",
@@ -14,20 +15,20 @@
 	"login": "Вход",
 	"logout": "Выйти",
 	"header-loggedin": "Вы вошли как $1",
-	"form-all": "Во всех случаях",
+	"form-all": "Все дела",
 	"form-open": "Открытые дела",
 	"form-reviewed": "Проверенные страницы",
 	"form-mine": "Мои комментарии",
 	"form-drafts": "Только черновики",
-	"wikiprojects": "ВикиПроекты",
-	"form-wikiprojects-placeholder": "Введите имя ВикиПроекта...",
+	"wikiprojects": "Вики-проекты",
+	"form-wikiprojects-placeholder": "Введите название вики-проекта...",
 	"submit": "Отправить",
 	"page": "Страница",
 	"diff": "Изменение",
 	"editor": "Редактор",
 	"review": "Проверить",
 	"review-fixed": "Страница исправлена",
-	"review-fixed-tooltip": "Правка является нарушением авторских прав и было отменено",
+	"review-fixed-tooltip": "Правка является нарушением авторских прав и была отменена",
 	"review-false": "Действий не требуется",
 	"review-false-tooltip": "Изменить это ложное срабатывание, ничего не надо делать",
 	"review-by": "Рассмотрены:",
@@ -37,35 +38,35 @@
 	"record-editcount": "Счётчик правок",
 	"compare": "Сравнить",
 	"record-ithenticate": "отчет iThenticate",
-	"record-url-text": "$1 редактировать ($2 слова)",
+	"record-url-text": "$1 правки (число слов: $2)",
 	"record-noeditor": "Редактор не найден",
 	"record-noeditor-tooltip": "Пересмотр может быть удален или данные еще не доступны в базе данных лаборатории.",
-	"record-ores": "Рудами результат: $1",
+	"record-ores": "Рейтинг ORES: $1",
 	"article": "Статья",
-	"compare-article-loading": "Загрузка пересмотр статьи...",
-	"compare-source-loading": "Погрузка возможный источник copyvio...",
+	"compare-article-loading": "Загрузка версии статьи...",
+	"compare-source-loading": "Загрузка возможного источника плагиата...",
 	"footer-loadmore": "Загрузить ещё",
-	"footer-nomore": "Больше никаких записей!",
-	"footer-broughtby": "Принес вам $1",
-	"footer-commtech": "Сообщество технологий",
-	"footer-poweredby": "Питание от $1 и $2",
+	"footer-nomore": "Других записей нет!",
+	"footer-broughtby": "Создано $1",
+	"footer-commtech": "Командой технологий",
+	"footer-poweredby": "Работает благодаря $1 и $2",
 	"source": "Источник",
-	"phabricator": "Фабрикатор",
+	"phabricator": "Ошибки и доработки",
 	"footer-imageattr": "Атрибуция изображения",
 	"lboard-title": "Таблица лидеров",
-	"lboard-week": "Случаи, которые были закрыты в последние 7 дней",
-	"lboard-month": "Случаи, которые были закрыты в течение последних 30 дней",
-	"lboard-alltime": "Во всех случаях время закрыт",
+	"lboard-week": "Дела, которые были закрыты в последние 7 дней",
+	"lboard-month": "Дела, которые были закрыты в течение последних 30 дней",
+	"lboard-alltime": "Дела, закрытые за всё время",
 	"lboard-back": "Вернуться к CopyPatrol",
 	"close": "Закрыть",
 	"imageattr-title": "Атрибуция изображения",
 	"imageattr-logo": "Логотип CopyPatrol",
 	"public-domain": "общественное достояние",
-	"open-font-license": "Открытая Лицензия Шрифта",
-	"imageattr-paragraph1": "$1 доступных на $2 учтивость $3 и $4",
-	"imageattr-paragraph2": "$1 выпущен под $2 учтивость $3",
-	"alert-testing": "Это промежуточная среда. Пожалуйста, не используйте этот инструмент для записи Ваших комментариев. Для инструмента CopyPatrol, пожалуйста, используйте $1.",
-	"js-unauthorized": "Вы должны войти в систему, чтобы проводить проверки.",
+	"open-font-license": "Открытая Шрифтовая Лицензия",
+	"imageattr-paragraph1": "$1 доступно для $2 благодаря $3 и $4",
+	"imageattr-paragraph2": "$1 выпущен под $2 благодаря $3",
+	"alert-testing": "Это промежуточная среда. Пожалуйста, не используйте этот инструмент для записи своих комментариев. Рабочая версия инструмента CopyPatrol находится по ссылке $1.",
+	"js-unauthorized": "Вы должны авторизоваться, чтобы проводить проверки.",
 	"js-dberror": "Произошла ошибка при подключении к базе данных.",
 	"js-undo-own-only": "Можно отменить только собственные проверки.",
 	"js-unknown-error": "Произошла неизвестная ошибка при загрузке результатов. Пожалуйста, попробуйте снова."
