Dynamically retrieve list of supported languages
The list of languages supported by CopyPatrol is retrieved from
the database, and cached for 7 days. The dropdown list in the
navbar now lists all these. Translations for all Wikipedias'
titles have been added.

The phpcs change is just to ignore the cache directory that
exists for local development.

Bug: https://phabricator.wikimedia.org/T152362

--- a/public_html/i18n/en.json
+++ b/public_html/i18n/en.json
@@ -10,8 +10,37 @@
   "documentation": "Documentation",
   "feedback": "Feedback",
   "leaderboard": "Leaderboard",
+  "zh-wikipedia": "Chinese Wikipedia",
+  "ja-wikipedia": "Japanese Wikipedia",
+  "th-wikipedia": "Thai Wikipedia",
   "en-wikipedia": "English Wikipedia",
+  "ko-wikipedia": "Korean Wikipedia",
+  "ca-wikipedia": "Catalan Wikipedia",
+  "hr-wikipedia": "Croatian Wikipedia",
+  "cs-wikipedia": "Czech Wikipedia",
+  "da-wikipedia": "Danish Wikipedia",
+  "nl-wikipedia": "Dutch Wikipedia",
+  "fi-wikipedia": "Finnish Wikipedia",
   "fr-wikipedia": "French Wikipedia",
+  "de-wikipedia": "German Wikipedia",
+  "hu-wikipedia": "Hungarian Wikipedia",
+  "it-wikipedia": "Italian Wikipedia",
+  "no-wikipedia": "Norwegian Wikipedia (Bokmål)",
+  "nn-wikipedia": "Norwegian Wikipedia (Nynorsk)",
+  "pl-wikipedia": "Polish Wikipedia",
+  "pt-wikipedia": "Portuguese Wikipedia",
+  "ro-wikipedia": "Romanian Wikipedia",
+  "sr-wikipedia": "Serbian Wikipedia",
+  "sk-wikipedia": "Slovak Wikipedia",
+  "sl-wikipedia": "Slovene Wikipedia",
+  "es-wikipedia": "Spanish Wikipedia",
+  "sv-wikipedia": "Swedish Wikipedia",
+  "ar-wikipedia": "Arabic Wikipedia",
+  "el-wikipedia": "Greek Wikipedia",
+  "he-wikipedia": "Hebrew Wikipedia",
+  "fa-wikipedia": "Persian Wikipedia",
+  "ru-wikipedia": "Russian Wikipedia",
+  "tr-wikipedia": "Turkish Wikipedia",
   "login": "Login",
   "logout": "Logout",
   "header-loggedin": "You are logged in as: $1",
