--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -12,8 +12,37 @@
 	"documentation": "Link to documentation in header\n{{Identical|Documentation}}",
 	"feedback": "Link to feedback in header\n{{Identical|Feedback}}",
 	"leaderboard": "Link to a list of the top reviewers in header",
-	"en-wikipedia": "Window title. Name of the English Wikipedia",
-	"fr-wikipedia": "Window title. Name of the French Wikipedia",
+	"zh-wikipedia": "{{identical|Chinese Wikipedia}}",
+	"en-wikipedia": "{{identical|English Wikipedia}}",
+	"ja-wikipedia": "{{identical|Japanese Wikipedia}}",
+	"th-wikipedia": "{{identical|Thai Wikipedia}}",
+	"ko-wikipedia": "{{identical|Korean Wikipedia}}",
+	"ca-wikipedia": "{{identical|Catalan Wikipedia}}",
+	"hr-wikipedia": "{{identical|Croatian Wikipedia}}",
+	"cs-wikipedia": "{{identical|Czech Wikipedia}}",
+	"da-wikipedia": "{{identical|Danish Wikipedia}}",
+	"nl-wikipedia": "{{identical|Dutch Wikipedia}}",
+	"fi-wikipedia": "{{identical|Finnish Wikipedia}}",
+	"fr-wikipedia": "{{identical|French Wikipedia}}",
+	"de-wikipedia": "{{identical|German Wikipedia}}",
+	"hu-wikipedia": "{{identical|Hungarian Wikipedia}}",
+	"it-wikipedia": "{{identical|Italian Wikipedia}}",
+	"no-wikipedia": "{{identical|Norwegian Wikipedia (Bokmål)}}",
+	"nn-wikipedia": "{{identical|Norwegian Wikipedia (Nynorsk)}}",
+	"pl-wikipedia": "{{identical|Polish Wikipedia}}",
+	"pt-wikipedia": "{{identical|Portuguese Wikipedia}}",
+	"ro-wikipedia": "{{identical|Romanian Wikipedia}}",
+	"sr-wikipedia": "{{identical|Serbian Wikipedia}}",
+	"sk-wikipedia": "{{identical|Slovak Wikipedia}}",
+	"sl-wikipedia": "{{identical|Slovene Wikipedia}}",
+	"es-wikipedia": "{{identical|Spanish Wikipedia}}",
+	"sv-wikipedia": "{{identical|Swedish Wikipedia}}",
+	"ar-wikipedia": "{{identical|Arabic Wikipedia}}",
+	"el-wikipedia": "{{identical|Greek Wikipedia}}",
+	"he-wikipedia": "{{identical|Hebrew Wikipedia}}",
+	"fa-wikipedia": "{{identical|Persian Wikipedia}}",
+	"ru-wikipedia": "{{identical|Russian Wikipedia}}",
+	"tr-wikipedia": "{{identical|Turkish Wikipedia}}",
 	"login": "Button label\n{{Identical|Login}}",
 	"logout": "Button label\n{{Identical|Logout}}",
 	"header-loggedin": "Message to tell user who they are logged in as.\n Parameter: $1 - Wiki username.",
