Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/cs.json
+++ b/public_html/i18n/cs.json
@@ -1,34 +1,72 @@
 {
 	"@metadata": {
 		"authors": [
-			"Wesalius"
+			"Wesalius",
+			"Martin Urbanec",
+			"Matěj Suchánek"
 		]
 	},
 	"documentation": "Dokumentace",
 	"feedback": "Zpětná vazba",
+	"leaderboard": "Žebříček",
+	"en-wikipedia": "Anglická Wikipedie",
+	"fr-wikipedia": "Francouzská Wikipedie",
 	"login": "Přihlášení",
 	"logout": "Odhlášení",
+	"header-loggedin": "Jste přihlášen jako: $1",
+	"form-all": "Všechny články",
+	"form-open": "Nezkontrolované články",
+	"form-reviewed": "Zkontrolované články",
+	"form-mine": "Moje kontroly",
 	"form-drafts": "Pouze koncepty",
 	"wikiprojects": "WikiProjekty",
+	"form-wikiprojects-placeholder": "Zadejte názvy WikiProjektů...",
 	"submit": "Odeslat",
 	"page": "Stránka",
 	"diff": "Porovnání verzí",
+	"editor": "Editor",
+	"review": "Kontrola",
+	"review-fixed": "Stránka opravena",
 	"review-fixed-tooltip": "Editace porušovala autorská práva a byla vrácena",
 	"review-false": "Není nutná žádná akce",
+	"review-false-tooltip": "Tato editace je falešně pozitivní, není třeba žádné akce",
+	"review-by": "Zkontroloval:",
 	"history": "Historie",
 	"talk": "Diskuze",
 	"contribs": "Příspěvky",
 	"record-editcount": "Počet editací:",
 	"compare": "Porovnat",
+	"record-ithenticate": "Výsledek z iThenticate",
+	"record-url-text": "$1 editací ($2 slov)",
+	"record-noeditor": "Editor nebyl nalezen",
+	"record-noeditor-tooltip": "Tato editace mohla být smazána anebo data k ní ještě nejsou k dispozici v databázi.",
 	"record-ores": "ORES skóre: $1",
 	"article": "Článek",
+	"compare-article-loading": "Načítání článku...",
+	"compare-source-loading": "Načítání možného zdroje porušení autorských práv...",
 	"footer-loadmore": "Načíst další",
 	"footer-nomore": "Žádné další záznamy!",
+	"footer-broughtby": "Připraveno pro vás týmem $1",
+	"footer-commtech": "Community Tech",
+	"footer-poweredby": "Poskytují $1 a $2",
 	"source": "Zdroj",
 	"phabricator": "Phabricator",
+	"footer-imageattr": "Autorství obrázku",
+	"lboard-title": "Výsledky",
 	"lboard-week": "Případy uzavřené v posledních 7 dnech",
 	"lboard-month": "Případy uzavřené v posledních 30 dnech",
+	"lboard-alltime": "Uzavřené případy celkově",
 	"lboard-back": "Zpět na CopyPatrol",
 	"close": "Zavřít",
-	"imageattr-logo": "CopyPatrol logo"
+	"imageattr-title": "Autor obrázku",
+	"imageattr-logo": "CopyPatrol logo",
+	"public-domain": "volné dílo",
+	"open-font-license": "License Open Font",
+	"imageattr-paragraph1": "$1 je k dispozici $2 s laskavým svolením $3 a $4",
+	"imageattr-paragraph2": "$1 vydané pod $2 s laskavým svolením $3",
+	"alert-testing": "Toto je testovací prostředí. Prosím, nevyužívejte tento nástroj pro zaznamenání vašich kontrol, namísto toho prosím využijte $1.",
+	"js-unauthorized": "Před kontrolou článku se musíte přihlásit.",
+	"js-dberror": "Během pokusu o připojení se k databázi nastala chyba.",
+	"js-undo-own-only": "Můžete vrátit pouze vlastní kontroly článků.",
+	"js-unknown-error": "Během pokusu o načtení výsledků nastala chyba. Prosím, zkuste to znovu."
 }
